--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -2,7 +2,7 @@ name: Auto merge main branch to dev branch
 on:
   push:
     branches:
-      - 'master'
+      - "master"
 jobs:
   sync-branch:
     runs-on: ubuntu-latest
@@ -13,6 +13,7 @@ jobs:
         uses: devmasx/merge-branch@master
         with:
           type: now
+          label_name: "Auto-merge master back to dev"
           from_branch: master
           target_branch: dev
           github_token: ${{ secrets.TOKEN }}
