--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -4,16 +4,13 @@ on:
     branches:
       - "master"
 jobs:
-  sync-branch:
+  merge-branch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-
-      - name: Merge master -> dev
-        uses: devmasx/merge-branch@master
+      - uses: actions/checkout@v2
+      - uses: everlytic/branch-merge@1.1.2
         with:
-          type: now
-          label_name: "Auto-merge master back to dev"
-          from_branch: master
-          target_branch: dev
           github_token: ${{ secrets.TOKEN }}
+          source_ref: "master"
+          target_branch: "dev"
+          commit_message_template: "[Automated] Merged {source_ref} into target {target_branch}"
