--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: everlytic/branch-merge@1.1.2
         with:
           github_token: ${{ secrets.TOKEN }}
-          source_ref: "master"
-          target_branch: "dev"
+          source_ref: master
+          target_branch: dev
           commit_message_template: "[Automated] Merged {source_ref} into target {target_branch}"
